VectorizeDebug compiler directive command is broken

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • b21

      JDK-8170416 broke the VectorizeDebug compiler directive command because there is no way to pass an uint flag and therefore the parser complaints with:

      Value error on line 7 byte 30: Cannot use int value for an uint flag
        At '2'.
                   VectorizeDebug: 2
              }
          }
      ]

            Assignee:
            Nils Eliasson (Inactive)
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: