8183271: VectorizeDebug compiler directive command is broken

Add parser support for uint

Reviewed-by: kvn, thartmann